--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ h4 a:hover {
 }
 
 .section-title .sub-title>span {
-    background-color: rgba(139, 133, 250, 0.8);
+    background-color: #F82A42;
     color: #fff;
     padding: 3px 3px 2px 5px;
     font-weight: 700;
